gitops/apps/odoo/base/odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
  namespace: odoo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: odoo
  ports:
    - name: http
      port: 8069
      targetPort: 8069
    - name: websocket
      port: 8072
      targetPort: 8072
